# study

./: .gitignore
Timber/: CMakeLists.txt  Timber.cpp
Timber/objects/: Cloud.cpp  Cloud.h
angular/: app.js  application.css  index.html  product-gallery.html  product-reviews.html  product-tabs.html  products.js
cpp/: bondini.cpp  cpp_prime_ch06e01.cpp  cpp_prime_ch06e02.cpp  cpp_prime_ch06e03.cpp  cpp_prime_ch06e04.cpp  cpp_prime_ch06e05.cpp  cpp_primer_pex01.cpp  cpp_primer_pex02.cpp  cpp_primer_pex03.cpp  cpp_primer_pex04.cpp  cpp_primer_pex06.cpp  floatnum.cpp  fltadd.cpp  limits.cpp  lotto.cpp  myfirst.cpp
hackerrankuol/src/br/com/versper/hackerrank/: Main.java
ogre3d/ogreapp/: TutorialApplication.cpp
patterns/WeatherStation/src/br/com/versper/patterns/: CurrentConditionsDisplay.java  DisplayElement.java  Observer.java  StatisticsDisplay.java  Subject.java  WeatherData.java  WeatherStation.java
patterns/src/br/com/versper/patterns/: Duck.java  FlyBehavior.java  FlyNoWay.java  FlyRocketPowered.java  FlyWithWings.java  MallardDuck.java  MiniDuckSimulator.java  ModelDuck.java  MuteQuack.java  Quack.java  QuackBehavior.java  Squeack.java
sfml/: CMakeLists.txt  main.cpp
